# PolyORB

./: COLLABORATION_SESSION_2025-11-18.md  RDB-004-TASK2-EXECUTION-PLAN.md  RDB-004-TASK3-EXECUTION-PLAN.md  RDB-004-TASK4-EXECUTION-PLAN.md  RDB-004-TASK5-EXECUTION-PLAN.md  RDB-005-GIOP-PROTOCOL-CONSOLIDATION.md  RDB-005-PHASE1-COMPLETION-REPORT.md  REFACTOR_CELL_UPDATE_2025-11-18.md  SEC-002-MIGRATION-GUIDE.md  security_validation_comprehensive.sh
.github/workflows/: build-test.yml  polyorb-ci.yml  security.yml
k8s/: datadog-agent-values.yaml  deploy-datadog-agent.sh
scripts/: validate-dockerfile.sh
services/widget-core/: CMakeLists.txt  Dockerfile.minimal
services/widget-core/tests/: widget_core_test.cpp
src/: polyorb-any-accessor_impl.adb  polyorb-any-cdr.adb  polyorb-any-cdr.ads  polyorb-any-controlled.adb  polyorb-any-controlled.ads  polyorb-any-typecode.adb  polyorb-any.adb  polyorb-representations-cdr-common.adb  polyorb-representations-cdr-common.ads  polyorb-representations-cdr.adb  polyorb-security-audit_log.adb  polyorb-security-audit_log.ads  polyorb-types.ads  polyorb-utils-unchecked_deallocation.adb  polyorb-utils-unchecked_deallocation.ads  polyorb-utils-validation.adb  polyorb-utils-validation.ads
src/corba/: corba.ads
src/giop/: polyorb-protocols-giop-common.adb  polyorb-protocols-giop-common.ads  polyorb-protocols-giop-common_impl.adb  polyorb-protocols-giop-common_impl.ads  polyorb-protocols-giop-giop_1_0.adb  polyorb-protocols-giop-giop_1_1.adb  polyorb-protocols-giop-giop_1_2.adb
src/security/: polyorb-qos-security_contexts.adb  polyorb-security-audit_log.adb  polyorb-security-audit_log.ads  polyorb-security-authorization_elements-unknown.adb  polyorb-security-exported_names-unknown.adb  polyorb-security-secure_memory.adb  (+1 more)
(+10 files in other folders)
